# residuos-solidos

./: .gitignore  README.md  pyproject.toml
alembic/: env.py
alembic/versions/: 12b487b8c1a4_add_all_tables_and_relationships.py  26ee8863839a_update_table_vehiculo.py  331891168ad0_add_promedios_and_general_residuos_.py  4ab44188abce_add_promedios_and_general_residuos_.py  5c63b45ff31c_add_table_recoleccion.py  8b994dbb1fe4_update_table_fk_vehiculo.py
app/: main.py
app/api/routes/: router.py
app/api/routes/barrido/: barrido.py
app/api/routes/recoleccion/: recoleccion.py  recoleccion_particular.py  vehiculo.py
app/api/routes/ruta/: ruta.py
app/api/routes/tipoResiduo/: tipoResiduo.py
app/api/routes/usuario/: user.py  usuario.py
app/config/: db.py
app/core/: config.py
app/model/: recoleccion.py  table_base.py
app/model/barrido/: barrido.py  usuario_barrido.py
app/model/recoleccion/: recoleccion.py  recoleccion_particular.py  usuario_recoleccion.py  vehiculo.py
app/model/residuo/: residuo.py  sub_tipo_residuo.py  tipo_residuo.py
app/model/ruta/: promedio_residuos.py  punto_recoleccion.py  punto_recoleccion_ruta.py  ruta.py  tipo_ruta.py
app/model/usuario/: rol.py  users.py  usuario.py
app/service/barrido/: barrido.py  usuario_barrido.py
app/service/recoleccion/: recoleccion.py  recoleccion_particular.py  vehiculo.py
app/service/residuo/: residuo.py  tipo_residuo.py
app/service/ruta/: ruta.py  tipo_ruta.py
app/service/usuario/: user.py  usuario.py
app/service/utils/: base_service.py
